2002-08-16  Federico Mena Quintero  <federico@ximian.com>

	Fixes part of #90133.

	* gedit-mdi.c (gedit_mdi_app_created_handler): Only restore the
	state/size of windows if the session is not being restored.

	* bonobo-mdi-session.c (bonobo_mdi_restore_state): Turn the
	restoring state of the MDI on/off as appropriate.

	* bonobo-mdi.c (bonobo_mdi_set_restoring_state): New function.
	(bonobo_mdi_get_restoring_state): New function.
	(app_clone): Only set the default size of the window if the
	session is not being restored.
	(app_create): Likewise.

2002-08-16  Federico Mena Quintero  <federico@ximian.com>

	* gedit-file.c (gedit_file_save): Also call gtk_window_present() here.
	(gedit_file_save_all): Likewise.
	(gedit_file_open_uri_list): Likewise.

	* gedit-mdi.c (gedit_mdi_remove_child_handler): Likewise.

2002-08-15  Federico Mena Quintero  <federico@ximian.com>

	* dialogs/gedit-preferences.glade2: Changed the ATK descriptions
	for the widgets that have duplicated labels, to make them more
	clear.  Fixes part of #90279.

2002-08-15  Federico Mena Quintero  <federico@ximian.com>

	Fixes part of #90133.

	* bonobo-mdi.c (bonobo_mdi_set_active_view): Do not call
	gtk_window_present(); it is better to do this case-by-case like
	when setting the active view from a menu.  Calling present() on
	every window will screw up session management as we don't want to
	change the stacking order or virtual desktop that the window
	manager will give us.
	(child_list_activated_cb): Do call gtk_window_present() here.

2002-08-14  Federico Mena Quintero  <federico@ximian.com>

	* dialogs/gedit-plugin-manager.c (plugin_manager_construct_tree):
	Install a custom search equal function for our non-string column.
	Fixes the treeview part of #90280.

2002-08-13  Federico Mena Quintero  <federico@ximian.com>

	Fixes #90231.

	* gedit-file-selector-util.c (ok_clicked_cb): Test whether the
	file is read-only and present a confirmation dialog in that case.