@@ -1,3 +1,8 @@
+2002-08-16  Paolo Maggi  <maggi@athena.polito.it>
+
+	* gedit-file.c (gedit_file_save_as): fixed bug #90879 (thanks to
+	Owen Taylor for the patch)
+
 2002-08-16  Federico Mena Quintero  <federico@ximian.com>
 
 	Fixes part of #90133.
